[metadata]
name = sdss-alertsActor
version = 2.2.1
author = John Donor
maintainer = John Donor
maintainer_email = j.donor@tcu.edu
description = actor for monitoring and raising alerts in SDSS
url = https://github.com/sdss/twistedAlertsActor
project_urls =
    Repository = https://github.com/sdss/twistedAlertsActor
long_description = file: README.md
long_description_content_type = text/x-rst
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
package_dir =
    = python
install_requires =
    pyyaml
    pygments
    twilio
    pyparsing
    sdsstools
    sdss-clu
scripts =
  bin/alertsActor
  bin/alerts_main.py

[options.extras_require]
dev =
    ipython>=7.13.0
    pytest>=3.0.7
    pytest-cov>=2.4.0
    pytest-sugar>=0.8.0

[options.packages.find]
where =
    python

[tool:pytest]
addopts = --cov kronos --cov-report html -W ignore

[coverage:run]
branch = true
include =
    python/kronos/*
omit =
    */__init__.py

[coverage:report]
exclude_lines =
